Add, delete project

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .discord-button {
+    @apply max-w-[150px] min-w-fit p-3 font-semibold text-nowrap no-animation text-xl rounded-xl hover:rounded-3xl transition-all duration-300 ease-linear cursor-pointer;
+  }
+}
